// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIEditableTableUtilityBar /> composes the className correctly 1`] = `
<tr
  className="xui-editabletableutilitybar test-classname"
>
  <td
    className="xui-editabletableutilitybar--cell"
    colSpan={0}
  >
    <div
      className="xui-editabletableutilitybar--cell--wrapper"
      style={
        Object {
          "width": undefined,
        }
      }
    />
  </td>
</tr>
`;

exports[`<XUIEditableTableUtilityBar /> renders correctly 1`] = `
<tr
  className="xui-editabletableutilitybar"
>
  <td
    className="xui-editabletableutilitybar--cell"
    colSpan={0}
  >
    <div
      className="xui-editabletableutilitybar--cell--wrapper"
      style={
        Object {
          "width": undefined,
        }
      }
    />
  </td>
</tr>
`;
